# area2waypoint

./: .gitignore  GITHUB_UPLOAD.md  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  cli.py
src/wpml/: __init__.py  build.py  compute.py  parse.py
tests/: test_area2waypoint.py
tests/fixtures/: area_minimal.kmz  area_minimal.wpml  area_minimal_template.kml
