[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "area2waypoint"
version = "0.1.0"
description = "Convert area mission KMZ to waypoint KMZ for DJI Pilot 2"
readme = "README.md"
requires-python = ">=3.6"
authors = []

[project.scripts]
area2waypoint = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
